Fix bullet point vertical aligning to the bottom of <li> elements in IE7. Closes #676

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -414,6 +414,8 @@ input[type=text]:focus, .text-input:focus, textarea:focus { -webkit-box-shadow: 
 .problem-form .steps-list li { padding: 25px 0 5px; border-bottom: 1px solid #dddddd; }
 .problem-form .slim-select > :first-child { margin-left: 20px; width: 45%; }
 
+.ie7 .problem-form .description-info ul li { zoom: 0; }
+
 .input-radio ul { padding: 0; }
 .input-radio li { display: inline; margin-right: 15px; }
 
