--- a/web/sass/base/_forms.scss
+++ b/web/sass/base/_forms.scss
@@ -295,8 +295,23 @@ textarea {
     margin-left: 20px;
     width: 45%;
   }
+
 }
 
+.ie7 {
+  .problem-form {
+    .description-info {
+      ul {
+        li {
+          // A weird bug in IE7 causes the bullet points on lists
+          // to vertically align to the bottom when they span multiple lines
+          // because hasLayout is triggered. This removes that.
+          zoom:0;
+        }
+      }
+    }
+  }
+}
 
 .input-radio {
   ul {
